--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,20 +9,62 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
-linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
-  rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+formatter:
+  page_width: 120
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+linter:
+  rules:
+    # Estilo
+    lines_longer_than_80_chars: false
+    require_trailing_commas: true
+    avoid_empty_else: true
+    avoid_relative_lib_imports: true
+    avoid_return_types_on_setters: true
+    avoid_types_as_parameter_names: true
+    curly_braces_in_flow_control_structures: true
+    prefer_single_quotes: true
+    sort_child_properties_last: true
+    always_put_required_named_parameters_first: true
+    eol_at_end_of_file: true
+
+    # Buenas prácticas
+    avoid_print: true
+    avoid_returning_null_for_future: true
+    cancel_subscriptions: true
+    close_sinks: true
+    control_flow_in_finally: true
+    empty_statements: true
+    empty_catches: true
+    implementation_imports: true
+    only_throw_errors: true
+    use_build_context_synchronously: true
+    use_key_in_widget_constructors: true
+    prefer_const_constructors: true
+    prefer_const_literals_to_create_immutables: true
+    prefer_final_fields: true
+    prefer_final_locals: true
+    prefer_is_not_empty: true
+    prefer_typing_uninitialized_variables: true
+    type_annotate_public_apis: true
+    use_function_type_syntax_for_parameters: true
+    use_to_and_as_if_applicable: true
+
+    # Riverpod-friendly
+    always_specify_types: false
+    depend_on_referenced_packages: false
+    no_logic_in_create_state: true
+
+analyzer:
+  plugins:
+    - custom_lint
+
+  exclude:
+    - lib/config/localizations/generated/*.dart
+    - lib/ui/localizations/generated/*.dart
+    - '**/*.freezed.dart'
+    - '**/*.g.dart'
+
+custom_lint:
+  rules:
+  - missing_provider_scope
+  - avoid_manual_provider_initialization
