--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^5.4.0
   retrofit: ^4.0.1
   cupertino_icons: ^1.0.6
+  go_router: ^13.1.0
 
 dev_dependencies:
   flutter_test:
