--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: kirin
-description: "Leva el control de los días de vacaciones de los colaboradores."
+description: "Lleva el control de los días de vacaciones de los colaboradores."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
