--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.4.10
-  freezed_annotation: ^3.1.0
+  freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
   intl: ^0.19.0
   dio: ^5.4.0
@@ -46,14 +46,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
   build_runner: ^2.4.6
-  freezed: ^3.1.0
+  freezed: ^2.4.6
   json_serializable: ^6.7.1
   riverpod_generator: ^2.3.10
   riverpod_lint: ^2.4.0
-  custom_lint: ^0.7.6
-  retrofit_generator: ^9.7.0
+  custom_lint: ^0.6.0
+  retrofit_generator: 8.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
